# master-of-coin

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  agents.md  docker-compose.image.example.yml  docker-compose.yml
backend/: Cargo.toml  README.md
backend/migrations/: 20251024000001_create_enums.sql  20251024000002_create_users_table.sql  20251024000003_create_accounts_table.sql  20251024000005_create_people_table.sql  20251024000007_create_transaction_splits_table.sql  20251024000009_create_budget_ranges_table.sql
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2025-10-25-000001_create_enums/: down.sql
backend/migrations/2025-10-25-000002_create_users_table/: up.sql
backend/migrations/2025-10-25-000003_create_accounts_table/: up.sql
backend/migrations/2025-10-25-000004_create_categories_table/: up.sql
backend/migrations/2025-10-25-000005_create_people_table/: down.sql  up.sql
backend/migrations/2025-10-25-000006_create_transactions_table/: down.sql  up.sql
backend/migrations/2025-10-25-000007_create_transaction_splits_table/: down.sql  up.sql
backend/migrations/2025-10-25-000008_create_budgets_table/: down.sql  up.sql
backend/migrations/2025-10-25-000009_create_budget_ranges_table/: down.sql  up.sql
backend/migrations/2025-10-25-000010_create_triggers/: down.sql  up.sql
backend/migrations/2025-10-25-000011_create_api_keys_table/: down.sql  up.sql
backend/migrations/2026-02-02-222913-0000_make_budget_range_end_date_nullable/: down.sql  up.sql
backend/migrations/2026-02-12-225826-0000_create_split_providers_table/: down.sql  up.sql
backend/migrations/2026-02-12-225956-0000_create_person_split_configs_table/: down.sql  up.sql
backend/migrations/2026-02-13-074040-0000_create_split_sync_records_table/: down.sql  up.sql
backend/scripts/: backup.sh  init-db.sh  restore.sh  seed.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/api/: mod.rs  (+1 more)
(+363 files in other folders)
