[package]
name = "master-of-coin-backend"
version = "0.1.0"
edition = "2024"

[[test]]
name = "integration_database"
path = "tests/integration/database/mod.rs"

[[test]]
name = "integration_api"
path = "tests/integration/api/mod.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-gzip",
] }
http = "1.0"
diesel = { version = "2.1", features = [
    "postgres",
    "uuid",
    "chrono",
    "numeric",
    "r2d2",
    "serde_json",
] }
diesel_migrations = "2.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
serial_test = "3.0"
axum-test = "15.0"
tower = "0.4"
hyper = "1.0"
http-body-util = "0.1"
